# django-json-array-field

./: CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: code-quality.yml
src/json_array_field/: utils.py
src/json_array_field/db/: fields.py
src/json_array_field/forms/: fields.py
src/json_array_field/rest_framework/: fields.py
tests/: params.py  settings.py
tests/polls/: admin.py  apps.py  forms.py  models.py  serializers.py
tests/polls/migrations/: 0001_initial.py
tests/test_json_array_field/: test_db_fields.py  test_form_fields.py  test_queries.py  test_rest_framework_fields.py  test_utils.py
